syntax = "proto3";

package Kaleido.Grpc.Categories;

import "Models/category-common.proto";

message GetAllCategoryRevisionsRequest {
    string key = 1;
}

message GetAllCategoryRevisionsResponse {
    repeated CategoryRevision revisions = 1;
}